# ese-assignment1-enterprise-app-backend

./: .coveragerc  .gitignore  README.md  data.json  manage.py  pyproject.toml  ruff.toml  schema.yml
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_634503398f1c265d_apps_py.html  z_634503398f1c265d_models_py.html  z_634503398f1c265d_permissions_py.html  z_634503398f1c265d_serialisers_py.html  z_634503398f1c265d_services_py.html  z_634503398f1c265d_urls_py.html  z_634503398f1c265d_views_py.html  z_a6f5eb498fd34351_test_auth_integration_py.html  z_a6f5eb498fd34351_test_password_reset_py.html  z_a6f5eb498fd34351_test_permissions_py.html  z_b8b17033158a6d18_0001_initial_py.html  z_b8b17033158a6d18_0002_playlist_cover_art_url_py.html  z_b8b17033158a6d18_0003_playlist_is_collaborative_py.html  z_b8b17033158a6d18_0004_playlistsong_added_by_py.html  z_b8b17033158a6d18_0005_alter_playlist_cover_art_url_alter_song_album_and_more_py.html  z_c0db5a5f8675b340_asgi_py.html  z_c0db5a5f8675b340_settings_py.html  z_c0db5a5f8675b340_test_Settings_py.html  z_c0db5a5f8675b340_urls_py.html  z_c0db5a5f8675b340_wsgi_py.html  z_d7caba16f2a88201_0001_initial_py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_tests_py.html
musicplayer/: apps.py  models.py  permissions.py  serialisers.py  services.py  spotify_views.py  urls.py  views.py
musicplayer_project/: asgi.py  settings.py  test_Settings.py  urls.py  wsgi.py
plans/: api_endpoints.txt  db_schema.txt
users/: apps.py  (+3 more)
(+19 files in other folders)
